--- a/style.css
+++ b/style.css
@@ -2,4 +2,16 @@ body {
   background-color: black;
   color: white;
   font-family: Arial, sans-serif;
+  margin: 0;
+}
+
+header {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+}
+
+.logo {
+  width: 50px;   /* размер логотипа */
+  height: auto;
 }
